tests/architecture/fixtures/invalid/layer-boundaries/application-require-sdk.ts
declare const require: (specifier: string) => unknown;
export const sdk = require("@nexoraxs/sdk");
